[gd_scene load_steps=2 format=2]

[ext_resource path="res://Popups/SaveDialog.gd" type="Script" id=1]

[node name="SaveDialog" type="WindowDialog"]
visible = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -100.0
margin_top = -43.0
margin_right = 100.0
margin_bottom = 43.0
size_flags_horizontal = 3
size_flags_vertical = 3
window_title = "Input Preset Name"
resizable = true
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -92.0
margin_top = -35.0
margin_right = 92.0
margin_bottom = 31.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_right = 184.0
margin_bottom = 66.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_right = 184.0
margin_bottom = 24.0

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_top = 5.0
margin_right = 42.0
margin_bottom = 19.0
text = "Name:"

[node name="NameLine" type="LineEdit" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 46.0
margin_right = 184.0
margin_bottom = 24.0
size_flags_horizontal = 3
clear_button_enabled = true
caret_blink = true
caret_blink_speed = 0.5

[node name="StatusLabel" type="Label" parent="MarginContainer/VBoxContainer"]
margin_top = 28.0
margin_right = 184.0
margin_bottom = 42.0
align = 1
valign = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 46.0
margin_right = 184.0
margin_bottom = 66.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="OK" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
margin_right = 90.0
margin_bottom = 20.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Save"

[node name="Cancel" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
margin_left = 94.0
margin_right = 184.0
margin_bottom = 20.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Cancel"
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer2/OK" to="." method="_on_OK_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer2/Cancel" to="." method="_on_Cancel_pressed"]
